Correction of size and position of the switch button for different screens

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -480,6 +480,30 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 2rem;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
+.top-4 {
+  top: 1rem;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -547,6 +571,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 3rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .w-full {
   width: 100%;
 }
@@ -557,6 +585,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-10\/12 {
   width: 83.333333%;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .cursor-pointer {
@@ -643,6 +675,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -720,9 +757,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2rem;
 }
 
+.after\:h-5::after {
+  content: var(--tw-content);
+  height: 1.25rem;
+}
+
 .after\:w-8::after {
   content: var(--tw-content);
   width: 2rem;
+}
+
+.after\:w-5::after {
+  content: var(--tw-content);
+  width: 1.25rem;
 }
 
 .after\:rounded-full::after {
@@ -808,8 +855,36 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-aspect-h: 9;
   }
 
+  .sm\:top-8 {
+    top: 2rem;
+  }
+
+  .sm\:right-8 {
+    right: 2rem;
+  }
+
+  .sm\:top-6 {
+    top: 1.5rem;
+  }
+
+  .sm\:right-6 {
+    right: 1.5rem;
+  }
+
+  .sm\:top-5 {
+    top: 1.25rem;
+  }
+
+  .sm\:right-5 {
+    right: 1.25rem;
+  }
+
   .sm\:h-96 {
     height: 24rem;
+  }
+
+  .sm\:h-8 {
+    height: 2rem;
   }
 
   .sm\:w-full {
@@ -818,6 +893,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .sm\:w-7\/12 {
     width: 58.333333%;
+  }
+
+  .sm\:w-16 {
+    width: 4rem;
   }
 
   .sm\:grid-cols-2 {
@@ -847,14 +926,60 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:after\:h-8::after {
+    content: var(--tw-content);
+    height: 2rem;
+  }
+
+  .sm\:after\:w-8::after {
+    content: var(--tw-content);
+    width: 2rem;
+  }
 }
 
 @media (min-width: 768px) {
+  .md\:top-8 {
+    top: 2rem;
+  }
+
+  .md\:right-8 {
+    right: 2rem;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
+  }
+
+  .md\:w-16 {
+    width: 4rem;
+  }
+
   .md\:border-b-8 {
     border-bottom-width: 8px;
   }
 
   .md\:text-justify {
     text-align: justify;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:after\:h-8::after {
+    content: var(--tw-content);
+    height: 2rem;
+  }
+
+  .md\:after\:w-8::after {
+    content: var(--tw-content);
+    width: 2rem;
   }
 }
